bug 92868 (also bugs 51037, 90960, 91443) - Simplified the style context provider mechanism, changed frame manager to re-resolve the provider first and to use correct style context in a few other places, sr=roc, r= bernd, a=asa.