layout/generic/nsFrame.h
@@ -282,9 +282,8 @@ public:
   NS_IMETHOD  GetAccessible(nsIAccessible** aAccessible);
 #endif
 
-  NS_IMETHOD GetParentStyleContextProvider(nsIPresContext* aPresContext,
-                                           nsIFrame** aProviderFrame, 
-                                           nsContextProviderRelationship& aRelationship);
+  NS_IMETHOD GetStyleContextProvider(nsIPresContext* aPresContext,
+                                     nsIFrame** aProviderFrame);
 
   // Check Style Visibility and mState for Selection (when printing)
   NS_IMETHOD IsVisibleForPainting(nsIPresContext *     aPresContext, 
@@ -528,4 +527,12 @@ protected:
 #endif
 // End Display Reflow Debugging
 
+// similar to NS_ENSURE_TRUE but with no return value
+#define ENSURE_TRUE(x)                                        \
+  PR_BEGIN_MACRO                                              \
+    if (!(x)) {                                               \
+       NS_WARNING("ENSURE_TRUE(" #x ") failed");              \
+       return;                                                \
+    }                                                         \
+  PR_END_MACRO
 #endif /* nsFrame_h___ */
