layout/html/base/src/nsFrame.cpp
@@ -3994,15 +3994,13 @@ nsFrame::ReflowCommandNotify(nsIPresShell*        aShell,
 }
 
 NS_IMETHODIMP 
-nsFrame::GetParentStyleContextProvider(nsIPresContext* aPresContext,
-                                       nsIFrame** aProviderFrame, 
-                                       nsContextProviderRelationship& aRelationship)
+nsFrame::GetStyleContextProvider(nsIPresContext* aPresContext,
+                                 nsIFrame**      aProviderFrame)
 {
   NS_ASSERTION(aPresContext && aProviderFrame, "null arguments: aPresContext and-or aProviderFrame");
   if (aProviderFrame) {
     // parent context provider is the parent frame by default
-    *aProviderFrame = mParent;
-    aRelationship = eContextProvider_Ancestor;
+    *aProviderFrame = this;
   }
   return ((aProviderFrame != nsnull) && (*aProviderFrame != nsnull)) ? NS_OK : NS_ERROR_FAILURE;
 }
